--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                   <a href="/blog.html" class="scroll-link">Blog</a>
                 </li>
                 <li>
-                    <a href="/contact.html" class="scroll-link">Contact us</a>
+                  <a id="tags" href="/fqas.html" class="scroll-link">FQAs </a>
                   </li>
               </ul>
         </nav>
