--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
               <a href="/blog.html" class="scroll-link">Blog</a>
             </li>
             <li>
-                <a href="/contact.html" class="scroll-link">Contact us</a>
-              </li>
+              <a id="tags" href="/fqas.html" class="scroll-link">FQAs </a>
+            </li>
           </ul>
     </nav>
     </header>
