--- a/fqas.html
+++ b/fqas.html
@@ -12,25 +12,39 @@
 <body>
     <header>                                                                                                                                                      
         <nav class="navbar">
-          <img src="/epic carreers grey/epic carreers.png" alt="">
-          <ul class="links">
-              <li>
-                <a id="tags" href="/index.html" class="scroll-link">Home</a>
-              </li>
-              <li>
-                <a id="tags" href="/about.html" class="scroll-link">About us</a>
-              </li>
-              <li>
-                <a id="tags" href="/service.html" class="scroll-link">Services</a>
-              </li>
-              <li>
-                <a id="tags" href="/blog.html" class="scroll-link">Blog</a>
-              </li>
-              <li>
+            <img src="/epic carreers grey/epic carreers.png" alt="">
+            <ul class="links" id="links">
+                <li>
+                  <a href="/index.html" class="scroll-link">Home</a>
+                </li>
+                <li>
+                  <a href="/about.html" class="scroll-link">About us</a>
+                </li>
+                <li>
+                  <a href="/service.html" class="scroll-link">Services</a>
+                </li>
+                <li>
+                  <a href="/blog.html" class="scroll-link">Blog</a>
+                </li>
+                <li>
                   <a id="tags" href="/fqas.html" class="scroll-link">FQAs </a>
                 </li>
-            </ul>
-      </nav>
+              </ul>
+              <div class="dropdown">
+                <span>MENU</span>
+                <div class="dropdown-content">
+                  <a href="/index.html" class="scroll-link">Home</a>
+                  <a href="/about.html" class="scroll-link">About us</a>
+                  <a href="/service.html" class="scroll-link">Services</a>
+                  <a href="/blog.html" class="scroll-link">Blog</a>
+                  <a id="tags" href="/fqas.html" class="scroll-link">FQAs </a>
+    
+                <!-- <a href="https://blog.hubspot.com/">Blog</a>
+                <a href="https://academy.hubspot.com/">Academy</a>
+                <a href="https://www.youtube.com/user/hubspot">YouTube</a> -->
+                </div>
+              </div>
+        </nav>
       </header>
       
   
