--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,8 +14,8 @@
     <header>                                                                                                                                                      
       <nav class="navbar">
         <img src="/epic carreers grey/epic carreers.png" alt="">
-        <ul class="links">
-            <li>
+        <ul class="links" id="links">
+          <li>
               <a href="/index.html" class="scroll-link">Home</a>
             </li>
             <li>
@@ -29,10 +31,21 @@
               <a id="tags" href="/fqas.html" class="scroll-link">FQAs </a>
             </li>
           </ul>
+          <div class="dropdown">
+            <span>MENU</span>
+            <div class="dropdown-content">
+              <a href="/index.html" class="scroll-link">Home</a>
+              <a href="/about.html" class="scroll-link">About us</a>
+              <a href="/service.html" class="scroll-link">Services</a>
+              <a href="/blog.html" class="scroll-link">Blog</a>
+              <a id="tags" href="/fqas.html" class="scroll-link">FQAs </a>
+
+      
+            </div>
+          </div>
     </nav>
     </header>
     <section id="home">
-      <!-- <div class="header"> EPIC CARRERS</div> -->
       <div class="homee">
         <div class="home1">
           <p>
@@ -46,12 +59,11 @@
          <span id="more" >
 
           </span>
-          <!-- <button  id="btn" class="span1">Read more</button> -->
           <a href="/about.html" class="span1"> Discover more</a>
 
         </div>
         <div class="home2">
-          <img src="/images/image3.jpeg" alt="">
+          <img src="/images/image 1 .png" alt="">
           
         </div>
       </div>
