--- a/index.html
+++ b/index.html
@@ -6,50 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
   
     <header>                                                                                                                                                      
-      <nav class="navbar">
-        <img src="/epic carreers grey/epic carreers.png" alt="">
-        <ul class="links" id="links">
-          <li>
-              <a href="/index.html" class="scroll-link">Home</a>
-            </li>
-            <li>
-              <a href="/about.html" class="scroll-link">About us</a>
-            </li>
-            <li>
-              <a href="/service.html" class="scroll-link">Services</a>
-            </li>
-            <li>
-              <a href="/blog.html" class="scroll-link">Blog</a>
-            </li>
-            <li>
-              <a id="tags" href="/fqas.html" class="scroll-link">FQAs </a>
-            </li>
-          </ul>
-          <div class="dropdown">
-            <span>MENU</span>
-            <div class="dropdown-content">
-              <a href="/index.html" class="scroll-link">Home</a>
-              <a href="/about.html" class="scroll-link">About us</a>
-              <a href="/service.html" class="scroll-link">Services</a>
-              <a href="/blog.html" class="scroll-link">Blog</a>
-              <a id="tags" href="/fqas.html" class="scroll-link">FQAs </a>
-
-      
+      <nav id="nav">
+        <div class="nav-center1">
+            <!-- nav header -->
+            <div class="nav-header1">
+                <!-- logo -->
+            <img src="/epic carreers grey/epic carreers.png" class="logo" alt="">
+            <!-- <img src="images/PHOTO-2022-06-28-18-34-28.jpg" class="logo" alt="logo"> -->
+                <button class="nav-toggle">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
             </div>
-          </div>
+            <div class="links-container1">
+                <ul class="links1">
+                    <li>
+                      <a  id="tags" href="/index.html" >Home</a>
+                    </li>
+                    <li>
+                      <a  id="tags" href="/about.html" >About us</a>
+                    </li>
+                    <li>
+                      <a id="tags" href="/service.html" >Services</a>
+                    </li>
+                    <li>
+                      <a id="tags" href="/blog.html" >Blog</a>
+                    </li>
+                    <li>
+                      <a id="tags" href="/fqas.html" >FQAs </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
     </header>
     <section id="home">
       <div class="homee">
         <div class="home1">
           <p>
-            Welcome to EPIC CARRERS, where we use data analytics to
+            Welcome to Epic careers, where we use data analytics to
             provide personalized career guidance to high school students and offer
           opportunities for them to study abroad.  
             We believe that all students deserve access to accurate and reliable
@@ -151,5 +153,6 @@
       }
     }
     </script>
+    <script src="app.js"></script>
 </body>
 </html>
