--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
                 <img src="/epic carreers grey/epic carreers.png" class="logo" alt="">
                 <!-- <img src="images/PHOTO-2022-06-28-18-34-28.jpg" class="logo" alt="logo"> -->
                     <button class="nav-toggle">
-                        <i class="fa-solid fa-bars"></i>
+                        <a  id="tags" href="/index.html" >Home</a>
                     </button>
                 </div>
                 <div class="links-container1">
@@ -31,18 +31,7 @@
                         <li>
                           <a  id="tags" href="/index.html" >Home</a>
                         </li>
-                        <li>
-                          <a  id="tags" href="/about.html" >About us</a>
-                        </li>
-                        <li>
-                          <a id="tags" href="/service.html" >Services</a>
-                        </li>
-                        <li>
-                          <a id="tags" href="/blog.html" >Blog</a>
-                        </li>
-                        <li>
-                          <a id="tags" href="/fqas.html" >FQAs </a>
-                        </li>
+                      
                     </ul>
                 </div>
             </div>
