--- a/about.html
+++ b/about.html
@@ -145,8 +145,7 @@
     <footer>
         <p>
           &copy; epic careers
-          <span class="date"> </span> .all rights reserved
-        </p>
+          <span class="date"> </span></p>
       </footer>
       <script src="app.js"></script>
     </body>
