--- a/fqas.html
+++ b/fqas.html
@@ -10,7 +10,7 @@
               integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
               crossorigin="anonymous" referrerpolicy="no-referrer" />
           <title>Document</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="blog.css">
     </head>
 <body>
     <header>                                                                                                                                                      
@@ -22,7 +22,7 @@
                 <img src="/epic carreers grey/epic carreers.png" class="logo" alt="">
                 <!-- <img src="images/PHOTO-2022-06-28-18-34-28.jpg" class="logo" alt="logo"> -->
                     <button class="nav-toggle">
-                        <i class="fa-solid fa-bars"></i>
+                        <a  id="tags" href="/index.html" >Home</a>
                     </button>
                 </div>
                 <div class="links-container1">
@@ -147,6 +147,11 @@
           </div>
         </div>
       </section>
+      <footer>
+        <p>
+          &copy; epic careers
+          <span class="date"> </span></p>
+      </footer>
       <script src="app.js"></script>
     </body>
 </html>
