--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
           integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link href="/dist/output.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="blog.css">
 </head>
 <body>
     <header>                                                                                                                                                      
@@ -31,7 +31,18 @@
                         <li>
                           <a  id="tags" href="/index.html" >Home</a>
                         </li>
-                      
+                        <li>
+                          <a  id="tags" href="/about.html" >About us</a>
+                        </li>
+                        <li>
+                          <a id="tags" href="/service.html" >Services</a>
+                        </li>
+                        <li>
+                          <a id="tags" href="/blog.html" >Blog</a>
+                        </li>
+                        <li>
+                          <a id="tags" href="/fqas.html" >FQAs </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -148,6 +159,11 @@
     
    
     </section>
+    <footer>
+        <p>
+          &copy; epic careers
+          <span class="date"> </span></p>
+      </footer>
     <script src="app.js"></script>
 </body>
 </html>
