--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
         </form>
         <p>
           &copy; epic careers
-          <span class="date"> </span> .all rights reserved
-        </p>
+          <span class="date"> </span> </p>
       </section>
     </footer>
 
