--- a/service.html
+++ b/service.html
@@ -305,8 +305,7 @@
     <footer>
         <p>
           &copy; epic careers
-          <span class="date"> </span> .all rights reserved
-        </p>
+          <span class="date"> </span></p>
       </footer>
       <script src="app.js"></script>
     </body>
