--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         </div>
         <div class="home2">
-          <img src="/images/image 1 .png" alt="">
+          <img src="/images/new/1.png" alt="">
           
         </div>
       </div>
